--- a/src/main/webapp/app/entities/contestfield/detail/contestfield-detail.component.html
+++ b/src/main/webapp/app/entities/contestfield/detail/contestfield-detail.component.html
@@ -38,6 +38,18 @@
         <dd>
           <span>{{ contestfield.svalue }}</span>
         </dd>
+        <dt><span>Logic</span></dt>
+        <dd>
+          <span>{{ contestfield.logic }}</span>
+        </dd>
+        <dt><span>Ctype</span></dt>
+        <dd>
+          <span>{{ contestfield.ctype }}</span>
+        </dd>
+        <dt><span>Cname</span></dt>
+        <dd>
+          <span>{{ contestfield.cname }}</span>
+        </dd>
         <dt><span>Idcontest</span></dt>
         <dd>
           <div *ngIf="contestfield.idcontest">
