--- a/src/main/webapp/app/entities/fields/list/fields.component.html
+++ b/src/main/webapp/app/entities/fields/list/fields.component.html
@@ -56,6 +56,12 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
+          <th scope="col" jhiSortBy="contestform.id">
+            <div class="d-flex">
+              <span>Contestform</span>
+              <fa-icon class="p-1" icon="sort"></fa-icon>
+            </div>
+          </th>
           <th scope="col"></th>
         </tr>
       </thead>
@@ -67,6 +73,11 @@
           <td>{{ fields.name }}</td>
           <td>{{ fields.ftype }}</td>
           <td>{{ fields.fvalue }}</td>
+          <td>
+            <div *ngIf="fields.contestform">
+              <a [routerLink]="['/contestform', fields.contestform.id, 'view']">{{ fields.contestform.id }}</a>
+            </div>
+          </td>
           <td class="text-end">
             <div class="btn-group">
               <button type="submit" [routerLink]="['/fields', fields.id, 'view']" class="btn btn-info btn-sm" data-cy="entityDetailsButton">
