--- a/src/main/webapp/app/entities/generalrules/detail/generalrules-detail.component.html
+++ b/src/main/webapp/app/entities/generalrules/detail/generalrules-detail.component.html
@@ -1,24 +1,25 @@
-<div class="d-flex justify-content-center">
+<div class="d-flex justify-content-center" style="direction: rtl">
   <div class="col-8">
     <div *ngIf="generalrules">
-      <h2 data-cy="generalrulesDetailsHeading"><span>Generalrules</span></h2>
+      <h2 data-cy="generalrulesDetailsHeading"><span> الشــروط العــامــة </span></h2>
 
       <hr />
+      <br />
 
       <jhi-alert-error></jhi-alert-error>
 
       <jhi-alert></jhi-alert>
 
       <dl class="row-md jh-entity-details">
-        <dt><span>ID</span></dt>
+        <dt><span>المعـرّف</span></dt>
         <dd>
           <span>{{ generalrules.id }}</span>
         </dd>
-        <dt><span>Designation</span></dt>
+        <dt><span>الإســم</span></dt>
         <dd>
           <span>{{ generalrules.designation }}</span>
         </dd>
-        <dt><span>Effectdate</span></dt>
+        <dt><span>تـاريخ التفعـيل</span></dt>
         <dd>
           <span>{{ generalrules.effectdate | formatMediumDate }}</span>
         </dd>
