--- a/src/main/webapp/app/entities/generalrules/update/generalrules-update.component.html
+++ b/src/main/webapp/app/entities/generalrules/update/generalrules-update.component.html
@@ -1,18 +1,21 @@
 <div class="d-flex justify-content-center">
   <div class="col-8">
     <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-      <h2 id="jhi-generalrules-heading" data-cy="GeneralrulesCreateUpdateHeading">Create or edit a Generalrules</h2>
-
+      <h2 id="jhi-generalrules-heading" data-cy="GeneralrulesCreateUpdateHeading" style="direction: rtl">
+        <b> إنشــاء أو تحييـن الشــروط العــامة </b>
+      </h2>
+      <hr />
+      <br />
       <div>
         <jhi-alert-error></jhi-alert-error>
 
-        <div class="row mb-3" *ngIf="editForm.controls.id.value !== null">
-          <label class="form-label" for="field_id">ID</label>
+        <div class="row mb-3" *ngIf="editForm.controls.id.value !== null" style="direction: rtl">
+          <label class="form-label" for="field_id">المعــرّف</label>
           <input type="text" class="form-control" name="id" id="field_id" data-cy="id" formControlName="id" [readonly]="true" />
         </div>
 
-        <div class="row mb-3">
-          <label class="form-label" for="field_designation">Designation</label>
+        <div class="row mb-3" style="direction: rtl">
+          <label class="form-label" for="field_designation">الرجـاء إدخــال الإسـم : *</label>
           <input
             type="text"
             class="form-control"
@@ -21,13 +24,14 @@
             data-cy="designation"
             formControlName="designation"
           />
+
           <div *ngIf="editForm.get('designation')!.invalid && (editForm.get('designation')!.dirty || editForm.get('designation')!.touched)">
             <small class="form-text text-danger" *ngIf="editForm.get('designation')?.errors?.required"> هذا الحقل مطلوب. </small>
           </div>
         </div>
 
-        <div class="row mb-3">
-          <label class="form-label" for="field_effectdate">Effectdate</label>
+        <div class="row mb-3" style="direction: rtl">
+          <label class="form-label" for="field_effectdate">تــاريخ التفعـيل :*</label>
           <div class="input-group">
             <input
               id="field_effectdate"
@@ -47,11 +51,7 @@
         </div>
       </div>
 
-      <div>
-        <button type="button" id="cancel-save" data-cy="entityCreateCancelButton" class="btn btn-secondary" (click)="previousState()">
-          <fa-icon icon="ban"></fa-icon>&nbsp;<span>الغاء</span>
-        </button>
-
+      <div style="direction: rtl">
         <button
           type="submit"
           id="save-entity"
@@ -60,6 +60,10 @@
           class="btn btn-primary"
         >
           <fa-icon icon="save"></fa-icon>&nbsp;<span>حفظ</span>
+        </button>
+
+        <button type="button" id="cancel-save" data-cy="entityCreateCancelButton" class="btn btn-secondary" (click)="previousState()">
+          <fa-icon icon="ban"></fa-icon>&nbsp;<span>الغاء</span>
         </button>
       </div>
     </form>
