--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -4,12 +4,12 @@
   </div>
 
   <div class="col-md-9">
-    <h1 class="display-4"><span>أهلا وسهلا بك، جافا هبستر!</span> (Contestmanagerdb)</h1>
+    <h1 class="display-4" style="text-align: center"><span> أهلا وسهلا بك، فـي منصـة المنــاظــرات </span></h1>
 
-    <p class="lead">هذه صفحتك الرئيسية</p>
+    <p class="lead" style="text-align: center">هذه صفحتك الرئيسية</p>
 
     <div [ngSwitch]="account !== null">
-      <div class="alert alert-success" *ngSwitchCase="true">
+      <div class="alert alert-success" *ngSwitchCase="true" style="direction: rtl">
         <span id="home-logged-message" *ngIf="account">قمت بتسجيل الدخول كمستخدم "{{ account.login }}".</span>
       </div>
 
@@ -28,9 +28,33 @@
       </div>
     </div>
 
-    <p>إذا كان لديك أي سؤال حول JHipster:</p>
+    <div class="card" style="direction: rtl">
+      <h5 class="card-header">13جــوان 2022</h5>
+      <div class="card-body">
+        <h5 class="card-title"><a href="#"> إعلان مناظرة خارجية لانتداب أعوان تسيير وأعوان تنفيذ </a></h5>
+        <p class="card-text">
+          إعلان مناظرة خارجية لانتداب أعوان تسيير وأعوان تنفيذ تعتزم الشركة الجهوية للنقل بولاية صفاقس إجراء مناظرة خارجية بالملفات
+          وبالاختبارات لانتداب أعوان تنفيذ ...
+        </p>
+        <a href="#" class="btn btn-primary"> لمعـرفـة المزيــد ...</a>
+      </div>
+    </div>
+    <br />
+    <div class="card" style="direction: rtl">
+      <h5 class="card-header">13نوفمبــر 2018</h5>
+      <div class="card-body">
+        <h5 class="card-title"><a href="#"> إعلان مناظرة خارجية لانتداب عمــال , سـواق , قبــاض </a></h5>
+        <p class="card-text">
+          إعــلان انتداب منشأة عمومية للنقل البري للمسافرين مقرها صفاقس، ترغب في انتداب أعوان تنفيذ متربصين عن طريق مناظرة خارجية
+          بالاختبارات ...
+        </p>
+        <a href="#" class="btn btn-primary"> لمعـرفـة المزيــد ...</a>
+      </div>
+    </div>
 
-    <ul>
+    <!-- <p>إذا كان لديك أي سؤال حول JHipster:</p> -->
+
+    <!-- <ul>
       <li><a href="https://www.jhipster.tech/" target="_blank" rel="noopener noreferrer">JHipster homepage</a></li>
       <li>
         <a href="https://stackoverflow.com/tags/jhipster/info" target="_blank" rel="noopener noreferrer">JHipster on Stack Overflow</a>
@@ -49,6 +73,6 @@
     <p>
       <span>إذا كنت تحب JHipster، لا تنسى أن تعطي لنا نجم على</span>
       <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer">GitHub</a>!
-    </p>
+    </p> -->
   </div>
 </div>
