--- a/src/main/webapp/app/login/login.component.html
+++ b/src/main/webapp/app/login/login.component.html
@@ -1,7 +1,9 @@
-<div>
+<div style="direction: rtl">
   <div class="d-flex justify-content-center">
     <div class="col-lg-6 col-md-8 col-sm-10">
       <h1 data-cy="loginTitle">تسجيل الدخول</h1>
+      <hr />
+      <br />
       <div class="alert alert-danger" *ngIf="authenticationError" data-cy="loginError">
         <strong>فشل تسجيل الدخول!</strong> يرجى التحقق من بيانات الاعتماد الخاصة بك وحاول مرة أخرى.
       </div>
